--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -8,9 +8,12 @@ test booking in:
   ie 8,
   ie 7
   chrome
-enable booking in subscriptions like team
+simplify new_subscription_listener shop
+flash when task has been executed
 
 == NOTES TO LATER ==
+find a way to shop auto renewal
+gravatar throw warning if gravatar does not work (missing network)
 find a way for family subscription
 price on event, has to be optional to use the club system, or pay on arrival
 find a better way with installer, the file is pretty old school
