Fixed location for testing subscription.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,4 @@
 == NOTES FOR THIS RELEASE ==
-seems like team subscription does not work
 improve design on checkout anonymous
 test booking in:
   opera,
@@ -9,6 +8,7 @@ test booking in:
   chrome
 
 == NOTES TO LATER ==
+if subscription has team or booking, location is mandatory
 cannot expire expired subscriptions
 simplify new_subscription_listener shop
 no reason for a member to expire subscription, just remove renewal
