Fixed copy fields for schema.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -10,7 +10,7 @@ add booking plans
   - maintenance
   - cleaning
   - tournament
-fix num_team_day
+fix num_team_day (doctrine date_format)
 rules for when on the day a subscription can use booking
 something is broken when creating more intervals on the same field, fix it
 when field created, forward to create interval page
