Added plans to get virtual interval.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,10 @@
 == NOTES FOR THIS RELEASE ==
-add booking plans to Booking Helper validator
+fix virtual interval for:
+  bookings
+  schedules
+  plans
+  find a way to find everything between, maybe doctrine support between?
+fix name for plan_fields
 rules for when on the day a subscription can use booking
 something is broken when creating more intervals on the same field, fix it
 test booking in:
