--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,4 @@
 == NOTES FOR THIS RELEASE ==
-does renew membership of location works?
 check what happens if not logged in in renew subscriptions
 fix virtual interval for:
   bookings
@@ -13,6 +12,7 @@ test booking in:
   ie 7
 
 == NOTES TO LATER ==
+translate admin_interval days
 rules for when on the day a subscription can use booking
 something is broken when creating more intervals on the same field, fix it
 what happens if you put schema on already booked interval
