Removed user attributes.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -6,6 +6,8 @@ problem with team participant order
 problem with generate new schedules
 
 == NOTES TO LATER ==
+improve navigator
+correct links in navigator
 better timesupport on booking schema, its on danish today
 rules for when on the day a subscription can use booking
 implement payment for booking
