--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -5,6 +5,7 @@ problem with team participant order
 problem with generate new schedules
 
 == NOTES TO LATER ==
+improve installer, first page will set system up with parameters.ini file
 improve navigator
 correct links in navigator
 better timesupport on booking schema, its on danish today
