Moved some migrations to fixtures path.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -8,6 +8,7 @@ problem with generate new schedules
 
 == NOTES TO LATER ==
 improve paginator
+any way to install database with webinterface
 correct links in paginator
 better timesupport on booking schema, its on danish today
 rules for when on the day a subscription can use booking
