--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES FOR THIS RELEASE ==
+order status management
 check everything for danish translation
 problem with team participant order
 problem with generate new schedules
