--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1610,6 +1610,10 @@
         <source>Create status</source>
         <target>Opret staus</target>
       </trans-unit>
+      <trans-unit id="405">
+        <source>You have an unread critical message.|You have %amount% unread critical messages.</source>
+        <target>Du har en ulæst kritisk besked.|Du har %amount% ulæste kritiske beskeder.</target>
+      </trans-unit>
 
     </body>
   </file>
