--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,7 @@
 problem with generate new schedules
 cannot read mail logs
 better parser of mail logs
+remove throw exception in task listener
 
 == NOTES TO LATER ==
 set system locale for logging messages
