--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES FOR THIS RELEASE ==
+remove arrow on remove application file
 problem with generate new schedules
 cannot read mail logs
 better parser of mail logs
