Fixed minor bugs for installer to work properly.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,7 @@
 == NOTES TO THIS RELEASE ==
 fix bug in config location
+what about default sender address and default sender name
+send email on first user
 
 == NOTES TO LATER ==
 avoid try / catch on kernel.request listeners
