More minor customizations.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1674,6 +1674,10 @@
         <source>Company name</source>
         <target>Firmanavn</target>
       </trans-unit>
+      <trans-unit id="421">
+        <source>There are no fields.</source>
+        <target>Der er ingen baner.</target>
+      </trans-unit>
 
     </body>
   </file>
