--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,12 +1,13 @@
 == NOTES TO THIS RELEASE ==
+when you buy dated period subscription, bought subscrition in period is wrong
 on booking field start date, pick from date at 00:00:00 and not as now
 when start and end date on subscription, timezone does not work
 send email on first user
-in checkout shipping form, country has to be entity
 confirm order page in english
-if order not completely okay, remove the order, perhaps a transaction
 
 == NOTES TO LATER ==
+if order not completely okay, remove the order, perhaps a transaction
+in checkout shipping form, country has to be entity
 make sure user only can book in member status period
 make sure user only can use teams in member ship status period
 avoid try / catch on kernel.request listeners
