--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES TO THIS RELEASE ==
+translate manage intervals
 when you buy dated period subscription, bought subscrition in period is wrong
 on booking field start date, pick from date at 00:00:00 and not as now
 when start and end date on subscription, timezone does not work
