--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES TO THIS RELEASE ==
+translate admin user edit page
 quick create intervals when creating the field
 translate manage intervals
 when you buy dated period subscription, bought subscrition in period is wrong
