Added more locations to product attribute.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES TO THIS RELEASE ==
+phoe for admin should not be required
 translate admin user edit page
 quick create intervals when creating the field
 translate manage intervals
