--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,6 @@
 == NOTES TO THIS RELEASE ==
-phoe for admin should not be required
+filter with subscription date does not seems to wrk
+phone and email for admin should not be required
 translate admin user edit page
 quick create intervals when creating the field
 translate manage intervals
