--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES TO THIS RELEASE ==
+be able to change location as anonymous
 can only make shop in clubs
 filter with subscription date does not seems to wrk
 phone and email for admin should not be required
