--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,7 @@
 filter with subscription date does not seems to wrk
 quick create intervals when creating the field
 send email on first user
+validate activation links from email
 
 == NOTES TO LATER ==
 add transaction on complete order
