--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,7 @@
 == NOTES TO THIS RELEASE ==
 filter with subscription date does not seems to wrk
 quick create intervals when creating the field
+make sure upload dir is writable
 
 == NOTES TO LATER ==
 add transaction on complete order
