--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -4,6 +4,8 @@ filter with subscription date does not seems to wrk
 quick create intervals when creating the field
 
 == NOTES TO LATER ==
+make the admin user filter visible all the time to the right
+let users be able to browser other active members
 fix constraints to delete a location
 add transaction on complete order
 add transaction on order change
