fixed import users scripts.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -4,6 +4,9 @@ filter with subscription date does not seems to wrk
 quick create intervals when creating the field
 
 == NOTES TO LATER ==
+add defaults during install:
+  - categories
+  - products
 make the admin user filter visible all the time to the right
 let users be able to browser other active members
 fix constraints to delete a location
