--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,7 @@
 merge migrations into one file
 filter with subscription date does not seems to wrk
 quick create intervals when creating the field
+show subscription date from and to in product overview
 
 == NOTES TO LATER ==
 add defaults during install:
