--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,6 @@
 == NOTES TO THIS RELEASE ==
+validate change order works
+validate team penalty still works
 merge migrations into one file
 filter with subscription date does not seems to wrk
 quick create intervals when creating the field
