--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -5,6 +5,7 @@ filter with subscription date does not seems to wrk
 quick create intervals when creating the field
 show subscription date from and to in product overview
 make a quick way to remove all team penalties
+add message board
 
 == NOTES TO LATER ==
 add defaults during install:
