View start and expire dates for subscription.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,13 +1,15 @@
 == NOTES TO THIS RELEASE ==
-validate team penalty still works
 merge migrations into one file
 filter with subscription date does not seems to wrk
 quick create intervals when creating the field
-show subscription date from and to in product overview
 make a quick way to remove all team penalties
 add message board
+make sure yearly expire subscriptions will auto renew in the beginning of a new subscription
+does lifetime membership works?
+make a ranking list, look at scorekeepr, nice project :)
 
 == NOTES TO LATER ==
+use attribute class as product attribute converter
 add defaults during install:
   - categories
   - products
